fixed some  errors

--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -275,7 +275,7 @@ function updateOrderTable(orders) {
 }
 </script> --}}
 
-<script>
+{{!-- <script>
   let selectedStatus = '';
   let selectedPayment = '';
 
@@ -346,7 +346,7 @@ function updateOrderTable(orders) {
       tbody.appendChild(row);
     });
   }
-</script>
+</script> --}}
 
 
     
